adds schemas to OpenApi docs
