# docs/openapi/v1.yaml
@@ -17,6 +17,8 @@ tags:
     description: Health check endpoint
   - name: comms
     description: Operations supporting the SFD communications service
+  - name: metadata
+    description: Operations supporting the SFD metadata service
   - name: object
     description: Operations supporting the SFD object processing service
 openapi: 3.0.0
@@ -168,6 +170,72 @@ components:
       properties:
         data:
           $ref: '#/components/schemas/Events%20Document'
+    Model1:
+      type: object
+      properties:
+        sbi:
+          type: string
+        blobReference:
+          type: string
+        correlationId:
+          type: string
+          x-format:
+            guid: true
+    Model2:
+      type: object
+      properties:
+        id:
+          type: string
+          x-format:
+            guid:
+              version: uuidv4
+        source:
+          type: string
+        specversion:
+          type: string
+        type:
+          type: string
+        datacontenttype:
+          type: string
+        time:
+          type: string
+          format: date
+        data:
+          $ref: '#/components/schemas/Model1'
+      required:
+        - id
+        - source
+        - specversion
+        - type
+        - datacontenttype
+        - time
+        - data
+    Model3:
+      type: array
+      items:
+        $ref: '#/components/schemas/Model2'
+    Model4:
+      type: object
+      properties:
+        correlationId:
+          type: string
+          x-format:
+            guid:
+              version: uuidv4
+        events:
+          $ref: '#/components/schemas/Model3'
+      required:
+        - correlationId
+        - events
+    Get By Blob Reference:
+      type: object
+      properties:
+        data: &ref_1
+          $ref: '#/components/schemas/Model4'
+    Model5:
+      type: object
+      properties:
+        data: *ref_1
 paths:
   /health:
     get:
@@ -271,12 +339,30 @@ paths:
       tags:
         - metadata
       responses:
-        default:
-          description: Successful
+        '200':
+          description: Success
           content:
             application/json:
               schema:
-                type: string
+                $ref: '#/components/schemas/Get%20By%20Blob%20Reference'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Bad Request'
+        '404':
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Not Found'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Internal Server Error'
   /api/v1/metadata/events/id/{id}:
     get:
       summary: Returns a single metadata event by id
@@ -293,9 +379,27 @@ paths:
       tags:
         - metadata
       responses:
-        default:
-          description: Successful
+        '200':
+          description: Success
           content:
             application/json:
               schema:
-                type: string
+                $ref: '#/components/schemas/Model5'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Bad Request'
+        '404':
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Not Found'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Internal Server Error'
